error correct in leg.html

--- a/leg.html
+++ b/leg.html
@@ -13,7 +13,7 @@
         <a href="index.html"> <h1 class="logo"> Fit club </h1></a>
         <div class="right-nav">
             <div class="select-box">
-                <div class="select-heading"><span>biceps & triceps</span><img src="fitness_photo/down.png" width="30"></div>
+                <div class="select-heading"><span>Leg workout</span><img src="fitness_photo/down.png" width="30"></div>
                 <div class="options">
                     <a href="workout.html"><div class="option">all workout</div></a>
                     <a href="back.html"><div class="option">back workout</div></a>
@@ -37,11 +37,11 @@
             </div>
         </div>
         <div class="svgs">
-            <img src="fitness_photo/biceps1.gif" width="800px">
-            <img src="fitness_photo/biceps2.gif" width="800px">
-            <img src="fitness_photo/biceps3.gif" width="800px">
-            <img src="fitness_photo/triceps1.gif" width="800px">
-            <img src="fitness_photo/triceps2.gif" width="800px">
+            <img src="fitness_photo/leg.gif" width="800px">
+            <img src="fitness_photo/leg2.gif" width="800px">
+            <img src="fitness_photo/leg3.gif" width="800px">
+            <img src="fitness_photo/leg4.gif" width="800px">
+            <img src="fitness_photo/leg5.gif" width="800px">
         </div>
         <div class="virtual-assistant">
             <img src="fitness_photo/ai.png" width="120px">
